--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
-    "elysia": "^1.0.0"
+    "@elysiajs/swagger": "^1.3.1",
+    "@types/qrcode": "^1.5.5",
+    "elysia": "^1.4.12",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
-    "ts-node": "^10.0.0",
-    "typescript": "^4.0.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   },
   "author": "Your Name",
   "license": "MIT"
